<resources>
    <string name="app_name">UISettings</string>
    <string name="hello_world">Hello World!</string>
    <string name="settings_activity">Settings Demo</string>
    <string name="pref_sync">Synchronize</string>
    <string name="pref_sync_description">Synchronize with the account</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 3, 6 or 9 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>

    <string name="action_settings">Settings</string>
</resources>
