<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/pref_sync"
        android:summary="@string/pref_sync_description"
        android:defaultValue="true" />
    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:persistent="true"
        android:summary="@string/number_of_choices_description"
        android:title="@string/number_of_choices" 
        android:defaultValue="3"/>
    <MultiSelectListPreference
        android:entries="@array/regions_list"
        android:entryValues="@array/regions_list"
        android:key="pref_regionsToInclude"
        android:persistent="true"
        android:summary="@string/world_regions_description"
        android:title="@string/world_regions" 
        android:defaultValue="@array/regions_list"/>
</PreferenceScreen>
